# mimir

./: .gitattributes  .gitignore  .gitmodules  BUILD.gn  TODO.md  TODO.txt  build.bat  build.sh  configure.py  linux_debug.ninja  lorem.txt  project.4coder  setup_cl_x64.bat
.github/workflows/: ci.yml
assets/highlighting/: cpp.scm
assets/queries/bash/: highlights.scm
assets/queries/comment/: highlights.scm
assets/queries/cpp/: highlights.scm  injections.scm
assets/queries/cs/: highlights.scm
assets/queries/lua/: highlights.scm
assets/queries/rust/: highlights.scm
assets/shaders/: gui_prim_texture.frag.glsl  gui_prim_texture.vert.glsl  text.frag.glsl  text.vert.glsl
src/: allocator.cpp  allocator.h  array.h  assets.cpp  assets.h  core.cpp  core.h  file.h  font.cpp  font.h  fzy.cpp  gfx_opengl.cpp  gfx_opengl.h  gui.cpp  gui.h  hash.h  hash_table.h  input.cpp  input.h  lexer.cpp  lexer.h  linux_allocator.cpp  linux_clipboard.cpp  linux_core.cpp  linux_file.cpp  linux_glx.h  linux_input.cpp  linux_main.cpp  linux_memory.cpp  linux_mimir.cpp  linux_opengl.cpp  linux_opengl.h  linux_process.cpp  linux_thread.cpp  linux_window.cpp  maths.cpp  maths.h  memory.cpp  memory.h  mimir.cpp  (+24 more)
